--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/juunegreiros/nodejs-api-rest#readme",
   "dependencies": {
+    "axios": "^0.22.0",
     "consign": "^0.1.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
